finishing until penggunaan dana

--- a/frontend/before_login/table_four/penggunaan_dana.html
+++ b/frontend/before_login/table_four/penggunaan_dana.html
@@ -87,6 +87,7 @@
             </nav>
             <!-- End Navbar -->
         </div>
+
         <!-- Sidebar -->
         <div class="sidebar sidebar-style-2" data-background-color="blue2">
             <div class="sidebar-wrapper scrollbar scrollbar-inner">
@@ -112,17 +113,17 @@
                             <div class="collapse" id="table_one">
                                 <ul class="nav nav-collapse">
                                     <li>
-                                        <a href="pendidikan.html">
+                                        <a href="../table_one/pendidikan.html">
                                             <span class="sub-item">Pendidikan</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="../table_one/penelitian.html">
                                             <span class="sub-item">Penelitian</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="pengabdian.html">
+                                        <a href="../table_one/pengabdian.html">
                                             <span class="sub-item">Pengabdian Masyarakat</span>
                                         </a>
                                     </li>
@@ -230,7 +231,7 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a href="../table_four/penggunaan_dana.html">
+                            <a href="penggunaan_dana.html">
                                 <i class="fas fa-money-bill-alt"></i>
                                 <p>Penggunaan Dana</p>
                             </a>
@@ -300,7 +301,7 @@
             <div class="content">
                 <div class="page-inner">
                     <div class="page-header">
-                        <h4 class="page-title">Pendidikan</h4>
+                        <h4 class="page-title">Penggunaan Dana</h4>
                         <ul class="breadcrumbs">
                             <li class="nav-home">
                                 <a href="#">
@@ -311,13 +312,7 @@
                                 <i class="flaticon-right-arrow"></i>
                             </li>
                             <li class="nav-item">
-                                <a href="#">Kerjasama Tridharma</a>
-                            </li>
-                            <li class="separator">
-                                <i class="flaticon-right-arrow"></i>
-                            </li>
-                            <li class="nav-item">
-                                <a href="#">Pendidikan</a>
+                                <a href="#">Penggunaan Dana</a>
                             </li>
                         </ul>
                     </div>
@@ -325,7 +320,7 @@
                         <div class="col-md-12">
                             <div class="card">
                                 <div class="card-header">
-                                    <div class="card-title">Kerjasama Tridharma - Pendidikan</div>
+                                    <div class="card-title">Penggunaan Dana</div>
                                 </div>
                                 <div class="card-body">
                                     <table
@@ -333,17 +328,20 @@
                                         style="white-space: nowrap;">
                                         <thead align="center">
                                             <th rowspan="2">No</th>
-                                            <th rowspan="2">Lembaga Mitra</th>
-                                            <th colspan="3">Tingkat *)</th>
-                                            <th rowspan="2">Judul Kegiatan Kerjasama</th>
-                                            <th rowspan="2">Manfaat bagi PS yang Diakreditasi</th>
-                                            <th rowspan="2">Waktu dan Durasi</th>
-                                            <th rowspan="2">Bukti Kerjasama</th>
-                                            <th rowspan="2">Tahun Berakhirnya Kerjasama (YYYY)</th>
+                                            <th rowspan="2">Jenis Penggunaan</th>
+                                            <th colspan="4">Unit Pengelola Program Studi <br>
+                                                (Rupiah)</th>
+                                            <th colspan="4">Program Studi <br>(Rupiah)
+                                            </th>
                                             <tr>
-                                                <th>Internasional</th>
-                                                <th>Nasional</th>
-                                                <th>Wilayah</th>
+                                                <th>TS-2</th>
+                                                <th>TS-1</th>
+                                                <th>TS</th>
+                                                <th>Rata-rata</th>
+                                                <th>TS-2</th>
+                                                <th>TS-1</th>
+                                                <th>TS</th>
+                                                <th>Rata-rata</th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -360,18 +358,48 @@
                                                 <td>10</td>
                                             </tr>
                                             <tr>
-                                                <td>1</td>
-                                                <td>Nuvoton Technology Corporation</td>
-                                                <td align="center">✅</td>
-                                                <td></td>
-                                                <td></td>
-                                                <td>Nuvoton Academic Program</td>
-                                                <td>Peningkatan Perbaikan materi Pembelajaran Matakuliah Computer and
-                                                    Device</td>
-                                                <td>2016-2018 , (2 Tahun)</td>
-                                                <td>Bukti Penyerahan 20 Mikrokontroler, Sertifikat Training of Trainer
+                                                <td align="center">1</td>
+                                                <td>Biaya Operasional Pendidikan</td>
+                                                <td colspan="9" style="background-color: #D9D9D9;"></td>
+                                            </tr>
+                                            <tr>
+                                                <td align="center"></td>
+                                                <td>a. Biaya Dosen (Gaji, Honor)</td>
+                                                <td>2.769.524.000
                                                 </td>
-                                                <td>2018
+                                                <td>2.937.102.000
+                                                </td>
+                                                <td>2.998.781.000
+                                                </td>
+                                                <td>2.901.802.333
+                                                </td>
+                                                <td>406.140.000
+                                                </td>
+                                                <td>408.282.000
+                                                </td>
+                                                <td>409.080.000
+                                                </td>
+                                                <td>407.834.000
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td align="center"></td>
+                                                <td>b. Biaya Tenaga Kependidikan (Gaji, Honor)</td>
+                                                <td>2.703.807.000
+                                                </td>
+                                                <td>2.481.425.000
+                                                </td>
+                                                <td>2.533.534.900
+                                                </td>
+                                                <td>2.572.922.300
+                                                </td>
+                                                <td>337.312.000
+                                                </td>
+                                                <td>337.650.500
+                                                </td>
+                                                <td>337.888.000
+                                                </td>
+                                                <td>337.616.833
                                                 </td>
                                             </tr>
                                         </tbody>
@@ -400,7 +428,6 @@
     <!-- jQuery UI -->
     <script src="/assets/js/plugin/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
     <script src="/assets/js/plugin/jquery-ui-touch-punch/jquery.ui.touch-punch.min.js"></script>
-
     <!-- jQuery Scrollbar -->
     <script src="/assets/js/plugin/jquery-scrollbar/jquery.scrollbar.min.js"></script>
 
@@ -408,56 +435,152 @@
     <!-- Chart JS -->
     <script src="/assets/js/plugin/chart.js/chart.min.js"></script>
 
-    <!-- jQuery Sparkline -->
-    <script src="/assets/js/plugin/jquery.sparkline/jquery.sparkline.min.js"></script>
-
-    <!-- Chart Circle -->
-    <script src="/assets/js/plugin/chart-circle/circles.min.js"></script>
-
-    <!-- Datatables -->
-    <script src="/assets/js/plugin/datatables/datatables.min.js"></script>
-
-    <!-- Bootstrap Notify -->
-    <script src="/assets/js/plugin/bootstrap-notify/bootstrap-notify.min.js"></script>
-
-    <!-- jQuery Vector Maps -->
-    <script src="/assets/js/plugin/jqvmap/jquery.vmap.min.js"></script>
-    <script src="/assets/js/plugin/jqvmap/maps/jquery.vmap.world.js"></script>
-
-    <!-- Sweet Alert -->
-    <script src="/assets/js/plugin/sweetalert/sweetalert.min.js"></script>
-
     <!-- Atlantis JS -->
     <script src="/assets/js/atlantis.min.js"></script>
-
-    <!-- Atlantis DEMO methods, don't include it in your project! -->
-    <script src="/assets/js/setting-demo.js"></script>
     <script>
-        $('#lineChart').sparkline([102, 109, 120, 99, 110, 105, 115], {
-            type: 'line',
-            height: '70',
-            width: '100%',
-            lineWidth: '2',
-            lineColor: 'rgba(255, 255, 255, .5)',
-            fillColor: 'rgba(255, 255, 255, .15)'
+        barOne = document.getElementById('barOne').getContext('2d');
+        barTwo = document.getElementById('barTwo').getContext('2d');
+        var myBarChartOne = new Chart(barOne, {
+            type: 'bar',
+            data: {
+                labels: ["TS-1", "TS-2", "TS"],
+                datasets: [{
+                    data: [3, 7, 4],
+                    backgroundColor: 'rgb(23, 125, 255)',
+                    borderColor: 'rgb(23, 125, 255)',
+                }, ],
+            },
+            options: {
+                responsive: true,
+                maintainAspectRatio: false,
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero: true
+                        }
+                    }]
+                },
+                legend: {
+                    display: false
+                },
+                tooltips: {
+                    callbacks: {
+                        label: function (tooltipItem) {
+                            return tooltipItem.yLabel;
+                        }
+                    }
+                }
+            }
         });
+        var myBarChart = new Chart(barTwo, {
+            type: 'bar',
+            data: {
+                labels: ["TS-4", "TS-3", "TS-2", "TS-1", "TS"],
+                datasets: [{
+                        label: "Blue",
+                        data: [3, 7, 4, 5, 8],
+                        backgroundColor: 'rgb(23, 125, 255)',
+                        borderColor: 'rgb(23, 125, 255)',
+                    },
+                    {
+                        label: "Red",
+                        data: [4, 3, 5, 10, 6],
+                        backgroundColor: "red",
+                        borderColor: 'rgb(23, 125, 255)',
+                    },
+                    {
+                        label: "Green",
+                        data: [7, 2, 6, 4, 6],
+                        backgroundColor: "green",
+                    }
+                ]
+            },
+            options: {
+                responsive: true,
+                maintainAspectRatio: false,
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero: true
+                        }
+                    }]
+                },
+                legend: {
+                    display: false
+                },
+                tooltips: {
+                    callbacks: {
+                        label: function (tooltipItem) {
+                            return tooltipItem.yLabel;
+                        }
+                    }
+                }
 
-        $('#lineChart2').sparkline([99, 125, 122, 105, 110, 124, 115], {
-            type: 'line',
-            height: '70',
-            width: '100%',
-            lineWidth: '2',
-            lineColor: 'rgba(255, 255, 255, .5)',
-            fillColor: 'rgba(255, 255, 255, .15)'
+            }
         });
-
-        $('#lineChart3').sparkline([105, 103, 123, 100, 95, 105, 115], {
-            type: 'line',
-            height: '70',
-            width: '100%',
-            lineWidth: '2',
-            lineColor: 'rgba(255, 255, 255, .5)',
-            fillColor: 'rgba(255, 255, 255, .15)'
+        var myBarChartOne = new Chart(barThree, {
+            type: 'bar',
+            data: {
+                labels: ["TS-4", "TS-3", "TS-2", "TS-1", "TS"],
+                datasets: [{
+                    data: [3, 7, 4, 5, 8],
+                    backgroundColor: "red",
+                    borderColor: 'rgb(23, 125, 255)',
+                }, ],
+            },
+            options: {
+                responsive: true,
+                maintainAspectRatio: false,
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero: true
+                        }
+                    }]
+                },
+                legend: {
+                    display: false
+                },
+                tooltips: {
+                    callbacks: {
+                        label: function (tooltipItem) {
+                            return tooltipItem.yLabel;
+                        }
+                    }
+                }
+            }
+        });
+        var myBarChartOne = new Chart(barFour, {
+            type: 'bar',
+            data: {
+                labels: ["TS-4", "TS-3", "TS-2", "TS-1", "TS"],
+                datasets: [{
+                    data: [100, 90, 70, 80, 60],
+                    backgroundColor: "green",
+                    borderColor: 'rgb(23, 125, 255)',
+                }, ],
+            },
+            options: {
+                responsive: true,
+                maintainAspectRatio: false,
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero: true
+                        }
+                    }]
+                },
+                legend: {
+                    display: false
+                },
+                tooltips: {
+                    callbacks: {
+                        label: function (tooltipItem) {
+                            return tooltipItem.yLabel;
+                        }
+                    }
+                }
+            }
         });
     </script>
 </body>
