--- a/frontend/before_login/table_one/pengabdian.html
+++ b/frontend/before_login/table_one/pengabdian.html
@@ -164,92 +164,73 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="../table_three/dosen_pembimbing_utama.html">
                                             <span class="sub-item">Dosen Pembimbing Utama Tugas Akhir</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="../table_three/ekuivalen_waktu_mengajar.html">
                                             <span class="sub-item">Ekuivalen Waktu Mengajar Penuh (EWMP) Dosen Tetap
                                                 Perguruan Tinggi</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="../table_three/dosen_tidak_tetap.html">
                                             <span class="sub-item">Dosen Tidak Tetap</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="../table_three/dosen_industri.html">
                                             <span class="sub-item">Dosen Industri/Praktisi</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="../table_three/pengakuan.html">
                                             <span class="sub-item">Pengakuan/Rekognisi Dosen</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="../table_three/penelitian_dtps.html">
                                             <span class="sub-item">Penelitian DTPS</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="../table_three/pkm_dtps.html">
                                             <span class="sub-item">PkM DTPS</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="../table_three/publikasi_ilmiah.html">
                                             <span class="sub-item">Publikasi Ilmiah DTPS</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="../table_three/pagelaran.html">
                                             <span class="sub-item">Pagelaran/Pameran/Presentasi/Publikasi Ilmiah
                                                 DTPS</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="../table_three/karya_ilmiah.html">
                                             <span class="sub-item">Karya Ilmiah DTPS yang Disitasi</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="../table_three/produk.html">
                                             <span class="sub-item">Produk/Jasa DTPS yang Diadopsi oleh
                                                 Industri/Masyarakat</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
-                                            <span class="sub-item">Luaran Penelitian/PkM Lainnya - HKI (Paten, Paten
-                                                Sederhana)</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="penelitian.html">
-                                            <span class="sub-item">Luaran Penelitian/PkM Lainnya - HKI (Hak Cipta,
-                                                Desain Produk Industri, dll.)</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="penelitian.html">
-                                            <span class="sub-item">Luaran Penelitian/PkM Lainnya - Teknologi Tepat Guna,
-                                                Produk, Karya Seni, Rekayasa Sosial</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="penelitian.html">
-                                            <span class="sub-item">Luaran Penelitian/PkM Lainnya - Buku ber-ISBN, Book
-                                                Chapter</span>
+                                        <a href="../table_three/luaran_penelitian.html">
+                                            <span class="sub-item">Luaran Penelitian/PkM Lainnya oleh DTPS</span>
                                         </a>
                                     </li>
                                 </ul>
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a href="#">
+                            <a href="../table_four/penggunaan_dana.html">
                                 <i class="fas fa-money-bill-alt"></i>
                                 <p>Penggunaan Dana</p>
                             </a>
