--- a/frontend/before_login/table_three/dosen_pembimbing_utama.html
+++ b/frontend/before_login/table_three/dosen_pembimbing_utama.html
@@ -139,12 +139,12 @@
                             <div class="collapse" id="table_two">
                                 <ul class="nav nav-collapse">
                                     <li>
-                                        <a href="seleksi_mahasiswa.html">
+                                        <a href="../table_two/seleksi_mahasiswa.html">
                                             <span class="sub-item">Seleksi Mahasiswa</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="mahasiswa_asing.html">
+                                        <a href="../table_two/mahasiswa_asing.html">
                                             <span class="sub-item">Mahasiswa Asing</span>
                                         </a>
                                     </li>
@@ -224,33 +224,14 @@
                                     </li>
                                     <li>
                                         <a href="luaran_penelitian.html">
-                                            <span class="sub-item">Luaran Penelitian/PkM Lainnya - HKI (Paten, Paten
-                                                Sederhana)</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="luaran_penelitian_two.html">
-                                            <span class="sub-item">Luaran Penelitian/PkM Lainnya - HKI (Hak Cipta,
-                                                Desain Produk Industri, dll.)</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="luaran_penelitian_three.html">
-                                            <span class="sub-item">Luaran Penelitian/PkM Lainnya - Teknologi Tepat Guna,
-                                                Produk, Karya Seni, Rekayasa Sosial</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="luaran_penelitian_four.html">
-                                            <span class="sub-item">Luaran Penelitian/PkM Lainnya - Buku ber-ISBN, Book
-                                                Chapter</span>
+                                            <span class="sub-item">Luaran Penelitian/PkM Lainnya oleh DTPS</span>
                                         </a>
                                     </li>
                                 </ul>
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a href="#">
+                            <a href="../table_four/penggunaan_dana.html">
                                 <i class="fas fa-money-bill-alt"></i>
                                 <p>Penggunaan Dana</p>
                             </a>
@@ -355,7 +336,8 @@
                                             <th rowspan="3">No</th>
                                             <th rowspan="3">Nama Dosen</th>
                                             <th colspan="8">Jumlah Mahasiswa yang dibimbing</th>
-                                            <th rowspan="3">Rata-rata Jumlah Bimbingan di semua Program/ Semester</th>
+                                            <th rowspan="3">Rata-rata Jumlah Bimbingan <br> di semua Program/ Semester
+                                            </th>
                                             <tr>
                                                 <th colspan="4">pada PS yang Diakreditasi</th>
                                                 <th colspan="4">pada PS Lain di PT</th>
@@ -401,7 +383,6 @@
                                                     MOS-MICROSOFT,<br>
                                                     Operator Komputer Senior-BNSP</td>
                                                 <td>XML Data Storage,<br>Relational Database Design</td>
-                                                <td>V</td>
                                             </tr>
                                         </tbody>
                                     </table>
