add login and penggunaan dana

--- a/frontend/before_login/table_four/penggunaan_dana.html
+++ b/frontend/before_login/table_four/penggunaan_dana.html
@@ -402,6 +402,105 @@
                                                 <td>337.616.833
                                                 </td>
                                             </tr>
+                                            <tr>
+                                                <td align="center">2</td>
+                                                <td>Biaya operasional kemahasiswaan <br>(penalaran, minat, bakat, dan
+                                                    kesejahteraan).</td>
+                                                <td>2.769.524.000
+                                                </td>
+                                                <td>2.937.102.000
+                                                </td>
+                                                <td>2.998.781.000
+                                                </td>
+                                                <td>2.901.802.333
+                                                </td>
+                                                <td>406.140.000
+                                                </td>
+                                                <td>408.282.000
+                                                </td>
+                                                <td>409.080.000
+                                                </td>
+                                                <td>407.834.000
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td colspan="2" style="font-weight:bold;" align="center">Jumlah</td>
+                                                <td>2.703.807.000
+                                                </td>
+                                                <td>2.481.425.000
+                                                </td>
+                                                <td>2.533.534.900
+                                                </td>
+                                                <td>2.572.922.300
+                                                </td>
+                                                <td>337.312.000
+                                                </td>
+                                                <td>337.650.500
+                                                </td>
+                                                <td>337.888.000
+                                                </td>
+                                                <td>337.616.833
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td align="center">3</td>
+                                                <td>Biaya Penelitian</td>
+                                                <td>2.769.524.000
+                                                </td>
+                                                <td>2.937.102.000
+                                                </td>
+                                                <td>2.998.781.000
+                                                </td>
+                                                <td>2.901.802.333
+                                                </td>
+                                                <td>406.140.000
+                                                </td>
+                                                <td>408.282.000
+                                                </td>
+                                                <td>409.080.000
+                                                </td>
+                                                <td>407.834.000
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td align="center">4</td>
+                                                <td>Biaya PkM</td>
+                                                <td>2.769.524.000
+                                                </td>
+                                                <td>2.937.102.000
+                                                </td>
+                                                <td>2.998.781.000
+                                                </td>
+                                                <td>2.901.802.333
+                                                </td>
+                                                <td>406.140.000
+                                                </td>
+                                                <td>408.282.000
+                                                </td>
+                                                <td>409.080.000
+                                                </td>
+                                                <td>407.834.000
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td colspan="2" style="font-weight:bold;" align="center">Jumlah</td>
+                                                <td>2.703.807.000
+                                                </td>
+                                                <td>2.481.425.000
+                                                </td>
+                                                <td>2.533.534.900
+                                                </td>
+                                                <td>2.572.922.300
+                                                </td>
+                                                <td>337.312.000
+                                                </td>
+                                                <td>337.650.500
+                                                </td>
+                                                <td>337.888.000
+                                                </td>
+                                                <td>337.616.833
+                                                </td>
+                                            </tr>
                                         </tbody>
                                     </table>
                                 </div>
