--- a/frontend/before_login/table_four/penggunaan_dana.html
+++ b/frontend/before_login/table_four/penggunaan_dana.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="/assets/css/atlantis.min.css">
 
     <!-- CSS Just for demo purpose, don't include it in your project -->
-    <link rel="stylesheet" href="/assets/css/demo.css">
+    <link rel="stylesheet" href="/assets/css/custom.css">
 </head>
 
 <body>
