--- a/frontend/before_login/index.html
+++ b/frontend/before_login/index.html
@@ -26,13 +26,12 @@
             }
         });
     </script>
-
     <!-- CSS Files -->
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/css/atlantis.min.css">
 
     <!-- CSS Just for demo purpose, don't include it in your project -->
-    <link rel="stylesheet" href="/assets/css/demo.css">
+    <link rel="stylesheet" href="/assets/css/custom.css">
 </head>
 
 <body>
@@ -82,10 +81,95 @@
                             </a>
                         </li>
                     </ul>
+                    <form class="navbar-right mr-md-2">
+                        <div class="input-group-prepend">
+                            <button class="btn btn-outline-dark btn-round" type="button"
+                                style="font-size:16px;color: white;" data-toggle="modal"
+                                data-target="#exampleModalCenter">
+                                <span class="btn-label mr-2">
+                                    <i class="fas fa-sign-in-alt"></i>
+                                </span>
+                                Login
+                            </button>
+                        </div>
+                    </form>
                 </div>
             </nav>
             <!-- End Navbar -->
         </div>
+        <!-- Start Login Modal -->
+        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+            aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close d-flex align-items-center justify-content-center"
+                            data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true" class="fas fa-window-close"></span>
+                        </button>
+                    </div>
+                    <div class="row no-gutters">
+                        <div class="col-md-6 d-flex">
+                            <img src="/assets/images/login.png" alt="login" width="500px">
+                            <div class="centered font-italic">"Selamat datang"</div>
+                            <div class="bottom-left"><img src="/assets/images/icons.png" alt="login" width="90px">
+                            </div>
+                        </div>
+                        <div class="col-md-6 d-flex">
+                            <div class="modal-body p-5 img d-flex align-items-center color-2">
+                                <div class="text w-100 py-0 py-md-5">
+                                    <h2 class="text-center">LOGIN</h2>
+                                    <form action="#">
+                                        <div class="form-group">
+                                            <div class="placeholder-style">
+                                                <label for="email" class="label">Username</label>
+                                                <div class="input-group shadow-sm mb-2">
+                                                    <div class="input-group-prepend">
+                                                        <button class="btn btn-style" type="button">
+                                                            <i class="far fa-user"></i>
+                                                        </button>
+                                                    </div>
+                                                    <input type="text" class="form-control" id="email"
+                                                        placeholder="Username " />
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="placeholder-style">
+                                                <label for="password" class="label">Kata Sandi</label>
+                                                <div class="input-group shadow-sm mb-2">
+                                                    <div class="input-group-prepend">
+                                                        <button class="btn btn-style" type="button">
+                                                            <i class="fas fa-lock"></i>
+                                                        </button>
+                                                    </div>
+                                                    <input type="password" class="form-control" id="password"
+                                                        placeholder="Kata Sandi" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="form-check">
+                                                <label class="form-check-label">
+                                                    <input class="form-check-input" type="checkbox" value="wkwk" />
+                                                    <span class="form-check-sign">I agree to terms & conditions</span>
+                                                </label>
+                                            </div>
+                                        </div>
+                                        <div class="text-center">
+                                            <a type="submit" class="btn form-control btn-primary btn-round" href="#">
+                                                Masuk
+                                            </a>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End Login Modal -->
 
         <!-- Sidebar -->
         <div class="sidebar sidebar-style-2" data-background-color="blue2">
@@ -900,31 +984,10 @@
     <!-- jQuery Scrollbar -->
     <script src="/assets/js/plugin/jquery-scrollbar/jquery.scrollbar.min.js"></script>
 
-
-    <!-- Chart JS -->
-    <script src="/assets/js/plugin/chart.js/chart.min.js"></script>
-
-    <!-- jQuery Sparkline -->
-    <script src="/assets/js/plugin/jquery.sparkline/jquery.sparkline.min.js"></script>
-
-    <!-- Chart Circle -->
-    <script src="/assets/js/plugin/chart-circle/circles.min.js"></script>
-
-    <!-- Datatables -->
-    <script src="/assets/js/plugin/datatables/datatables.min.js"></script>
-
-    <!-- Bootstrap Notify -->
-    <script src="/assets/js/plugin/bootstrap-notify/bootstrap-notify.min.js"></script>
-
-    <!-- jQuery Vector Maps -->
-    <script src="/assets/js/plugin/jqvmap/jquery.vmap.min.js"></script>
-    <script src="/assets/js/plugin/jqvmap/maps/jquery.vmap.world.js"></script>
-
-    <!-- Sweet Alert -->
-    <script src="/assets/js/plugin/sweetalert/sweetalert.min.js"></script>
-
     <!-- Atlantis JS -->
     <script src="/assets/js/atlantis.min.js"></script>
+    <script src="/assets/js/main.js"></script>
+    <script src="/assets/js/main.js"></script>
 </body>
 
 </html>
