--- a/frontend/before_login/table_two/mahasiswa_asing.html
+++ b/frontend/before_login/table_two/mahasiswa_asing.html
@@ -7,8 +7,8 @@
     <meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
     <link rel="icon" href="/assets/img/icon.ico" type="image/x-icon" />
 
-    <!-- Fonts and icons -->
-    <script src="/assets/js/plugin/webfont/webfont.min.js"></script>
+    <!-- CSS Just for demo purpose, don't include it in your project -->
+    <link rel="stylesheet" href="/assets/css/custom.css">
     <script>
         WebFont.load({
             google: {
