setup login in all pages

--- a/frontend/before_login/index.html
+++ b/frontend/before_login/index.html
@@ -148,18 +148,11 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="form-group">
-                                            <div class="form-check">
-                                                <label class="form-check-label">
-                                                    <input class="form-check-input" type="checkbox" value="wkwk" />
-                                                    <span class="form-check-sign">I agree to terms & conditions</span>
-                                                </label>
-                                            </div>
-                                        </div>
-                                        <div class="text-center">
-                                            <a type="submit" class="btn form-control btn-primary btn-round" href="#">
-                                                Masuk
-                                            </a>
+                                        <div class="text-center mt-3">
+                                            <button type="submit" class="btn form-control btn-primary btn-round"
+                                                href="#">
+                                                LOGIN
+                                            </button>
                                         </div>
                                     </form>
                                 </div>
@@ -389,9 +382,9 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a href="#">
-                                <i class="fas fa-arrow-circle-right"></i>
-                                <p>Login</p>
+                            <a data-toggle="collapse" href="#">
+                                <i class="fas fa-book"></i>
+                                <p>PkM DTPS yang <br> Melibatkan Mahasiswa</p>
                             </a>
                         </li>
                     </ul>
