--- a/frontend/before_login/table_one/pendidikan.html
+++ b/frontend/before_login/table_one/pendidikan.html
@@ -30,8 +30,6 @@
     <!-- CSS Files -->
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/css/atlantis.min.css">
-
-    <!-- CSS Just for demo purpose, don't include it in your project -->
     <!-- CSS Just for demo purpose, don't include it in your project -->
     <link rel="stylesheet" href="/assets/css/custom.css">
 </head>
@@ -113,6 +111,9 @@
                     <div class="row no-gutters">
                         <div class="col-md-6 d-flex">
                             <img src="/assets/images/login.png" alt="login" width="500px">
+                            <div class="centered font-italic">"Selamat datang"</div>
+                            <div class="bottom-left"><img src="/assets/images/icons.png" alt="login" width="90px">
+                            </div>
                         </div>
                         <div class="col-md-6 d-flex">
                             <div class="modal-body p-5 img d-flex align-items-center color-2">
@@ -147,18 +148,11 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="form-group">
-                                            <div class="form-check">
-                                                <label class="form-check-label">
-                                                    <input class="form-check-input" type="checkbox" value="wkwk" />
-                                                    <span class="form-check-sign">I agree to terms & conditions</span>
-                                                </label>
-                                            </div>
-                                        </div>
-                                        <div class="text-center">
-                                            <a type="submit" class="btn form-control btn-primary btn-round" href="#">
-                                                Masuk
-                                            </a>
+                                        <div class="text-center mt-3">
+                                            <button type="submit" class="btn form-control btn-primary btn-round"
+                                                href="#">
+                                                LOGIN
+                                            </button>
                                         </div>
                                     </form>
                                 </div>
@@ -168,6 +162,7 @@
                 </div>
             </div>
         </div>
+        <!-- End Login Modal -->
         <!-- Sidebar -->
         <div class="sidebar sidebar-style-2" data-background-color="blue2">
             <div class="sidebar-wrapper scrollbar scrollbar-inner">
@@ -365,12 +360,6 @@
                                     </li>
                                 </ul>
                             </div>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#">
-                                <i class="fas fa-arrow-circle-right"></i>
-                                <p>Login</p>
-                            </a>
                         </li>
                     </ul>
                 </div>
