change href kurikulum

--- a/frontend/before_login/table_three/dosen_pembimbing_utama.html
+++ b/frontend/before_login/table_three/dosen_pembimbing_utama.html
@@ -321,19 +321,19 @@
                             <div class="collapse" id="table_five">
                                 <ul class="nav nav-collapse">
                                     <li>
-                                        <a href="pendidikan.html">
+                                        <a href="../table_five/kurikulum_capaian.html">
                                             <span class="sub-item">Kurikulum, Capaian Pembelajaran, dan Rencana
                                                 Pembelajaran</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="../table_five/integrasi_kegiatan.html">
                                             <span class="sub-item">Integrasi Kegiatan Penelitian/PkM dalam
                                                 Pembelajaran</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="penelitian.html">
+                                        <a href="../table_five/kepuasan_mahasiswa.html">
                                             <span class="sub-item">Kepuasan Mahasiswa</span>
                                         </a>
                                     </li>
